# applicationtestplatform

./: .env.example  .gitignore  CHANGELOG.md  LICENSE.md  MANIFEST.in  Makefile  README.md  manage.py  pyproject.toml  requirements-dev.txt  requirements.txt
.github/workflows/: ci.yml
administrative/: admin.py  apps.py  forms.py  models.py  tests.py  urls.py  views.py
administrative/templates/administrative/: applicant_detail.html  applicant_form.html  applicant_list.html  dashboard.html  mail_send.html  message_detail.html  message_list.html  template_form.html  template_list.html
applicants/: admin.py  apps.py  models.py  tests.py  urls.py  views.py
applicants/migrations/: 0001_initial.py
applicants/templates/applicants/: index.html
applicationtestplatform/: asgi.py  settings.py  urls.py  wsgi.py
mailroom/: admin.py  apps.py  models.py  tests.py
mailroom/management/commands/: fetch_mail.py  send_mail_template.py
mailroom/migrations/: 0001_initial.py
mailroom/services/: __init__.py  fetcher.py  imap_client.py  sender.py
static/css/: site.css
templates/: base.html
