[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "applicationtestplatform"
version = "0.1.0"
description = "A Django web application that lets applicants answer questions and submit predefined or free-text responses for review."
readme = "README.md"
license = {file = "LICENSE.md"}
requires-python = ">=3.11"
authors = [
    {name = "DATAJOB - a bit ahead"},
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Environment :: Web Environment",
    "Framework :: Django",
    "Framework :: Django :: 5.0",
    "Intended Audience :: End Users/Desktop",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Internet :: WWW/HTTP",
    "Topic :: Internet :: WWW/HTTP :: Dynamic Content",
]
dependencies = [
    "Django>=5.0,<6.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-django>=4.8",
    "ruff>=0.5",
]

[project.urls]
Homepage = "https://github.com/shuber42/applicationtestplatform"
Repository = "https://github.com/shuber42/applicationtestplatform"

[tool.setuptools]
include-package-data = true

[tool.setuptools.packages.find]
include = ["applicationtestplatform*", "administrative*", "applicants*"]
exclude = ["tests*", "docs*", "scripts*"]

[tool.pytest.ini_options]
DJANGO_SETTINGS_MODULE = "applicationtestplatform.settings"
python_files = ["test_*.py", "*_test.py", "tests.py"]
testpaths = ["administrative", "applicants", "mailroom"]
addopts = "-ra"

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP", "DJ"]
ignore = [
    "E501",  # line length (ruff format handles wrapping)
]

[tool.ruff.lint.per-file-ignores]
"**/migrations/*.py" = ["E", "F", "I", "B", "UP"]
